--- a/web_interface/templates/main.html
+++ b/web_interface/templates/main.html
@@ -71,4 +71,12 @@ $(function() {
 	<p>Your files have been uploaded and are being parsed. Please wait...</p>
 </div>
 </form>
+<div class="center">
+	<div class="inline">
+		<a href="/uploaded">
+			<img src="/static/icons/database.png" /><br />
+			View All
+		</a>
+	</div>
+</div>
 {% endblock %}
