--- a/web_interface/templates/uploaded.html
+++ b/web_interface/templates/uploaded.html
@@ -3,32 +3,32 @@
 {{ super() }}
 	<title>Upload Complete</title>
 	<style type="text/css">
-		div.file {margin: 3px auto; border: 1px solid #AAA;}
-		div.file img{vertical-align:middle;}
-		div.file span{display:inline-block; vertical-align:middle;}
+		#files{width:600px;margin:auto;}
+		#files th{text-align:center;}
+		#files td{border:1px solid black;}
 	</style>
 {% endblock %}
 
 {% block body %}
 
-<h1>Upload Complete</h1>
 {{ message }}
 <h3>Received Files:</h3>
+<table id="files">
+	<tr>
+		<th>File Name</th>
+		<th>Size</th>
+	</tr>
 {% for f in files %}
-<div class="file">
-{% if f[1] %}
-	<img src="/static/icons/checkmark.png" title="{{ f[2] }}" />
-	<span><a href="{{ f[3] }}">{{ f[0] }}</a></span>
-{% else %}
-	<img src="/static/icons/error.png" title="{{ f[2] }}" />
-	<span>{{ f[0] }}</span>
-{% endif %}
-</div>
+	<tr>
+		<td><a href="{{ f[1] }}">{{ f[0] }}</a></span></td>
+		<td>{{ f[2] }}</td>
+	</tr>
 {% endfor %}
+</table>
 <div class="center">
 	<a href="/">
 		<img src="/static/icons/arrow-left.png" /><br />
-		Upload More
+		Upload
 	</a>
 </div>
 
